--- a/apps/panel/src/app/modules/admin/mcompanies/mcompany/list/module.component.html
+++ b/apps/panel/src/app/modules/admin/mcompanies/mcompany/list/module.component.html
@@ -165,7 +165,7 @@
                           <mat-label>Email</mat-label>
                           <input matInput [formControlName]="'email'" />
                         </mat-form-field>
-                        <mat-form-field class="lg:w-1/3 w-full lg:pr-2">
+                        <mat-form-field class="w-full">
                           <mat-label>Adres</mat-label>
                           <textarea matInput [formControlName]="'address'" ></textarea>
                         </mat-form-field>
